upgrading the response of the chatbot and modifying the UI features in the chatbot page

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
+reset_auth.py
 MANIFEST
 *~
 # Virtual environments
@@ -31,6 +32,9 @@ ENV/
 # Environment variables
 .env
 .venv
+credentials.json
+token.json
+
 
 # IDE
 .vscode/
