--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,16 @@
+anthropic==0.67.0
+fastapi==0.116.1
 Flask==3.1.2
 Flask_Login==0.6.3
-langchain==0.3.27
-langchain_groq==0.3.7
+google_api_python_client==2.181.0
+google_auth_oauthlib==1.2.2
+mcp==1.14.0
 pandas==2.3.2
+protobuf==6.32.1
+pydantic==2.11.9
+PyPDF2==3.0.1
 python-dotenv==1.1.1
+python_docx==1.1.2
+python_pptx==1.0.2
+Requests==2.32.5
+uvicorn==0.35.0
