--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,5 @@
-anthropic==0.67.0
-fastapi==0.116.1
-Flask==3.1.2
-Flask_Login==0.6.3
-google_api_python_client==2.181.0
-google_auth_oauthlib==1.2.2
-mcp==1.14.0
-pandas==2.3.2
-protobuf==6.32.1
-pydantic==2.11.9
-PyPDF2==3.0.1
-python-dotenv==1.1.1
-python_docx==1.1.2
-python_pptx==1.0.2
-Requests==2.32.5
-uvicorn==0.35.0
+Flask==2.3.3
+Flask-Login==0.6.3
+python-dotenv==1.0.0
+requests==2.31.0
+anthropic>=0.7.0
