--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,15 @@
-anthropic==0.67.0
-fastapi==0.116.1
+anthropic==0.68.0
+fastapi==0.116.2
+fastmcp==2.12.3
 Flask==3.1.2
 Flask_Login==0.6.3
 google_api_python_client==2.181.0
 google_auth_oauthlib==1.2.2
-mcp==1.14.0
+langchain_core==0.3.76
+langchain_openai==0.3.33
+mcp==1.14.1
 pandas==2.3.2
+Pillow==11.3.0
 protobuf==6.32.1
 pydantic==2.11.9
 PyPDF2==3.0.1
