--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,7 @@ Requests==2.32.5
 uvicorn==0.36.0
 google-cloud-bigquery
 gunicorn==21.2.0
+python-pptx==0.6.23
+python-docx==1.1.2
+google-cloud-bigquery==3.27.0
+google-auth==2.38.0
